@@ -55,38 +55,38 @@ public class GameService {
     }
 
     public static @Nullable Card suggestedCard(@NotNull ArrayList<Card> playedCards,
-                                               ArrayList<Card> myCards, Card.Suit hokm) {
-        Card.Suit base = playedCards.get(0).getSuit();
-        if ((playedCards.size() == 1) && (containCard(myCards, base)) && (haveBetterCard(myCards, playedCards.get(0)))) {
-            return bestCard(myCards, base);
-        } else if ((playedCards.size() == 2) && (!containCard(myCards, base)) && (containCard(playedCards, hokm)) && (containCard(myCards, hokm)) && (bestCard(myCards, hokm).compareTo(playedCards.get(1)) < 0) && (base != hokm) && (playedCards.get(1).getSuit() == hokm)) {
-            return worstCardNot(myCards, base, playedCards.get(1).getSuit());
-        } else if ((playedCards.size() == 2) && (containCard(myCards, base)) && (!haveBetterCard(myCards, topCard(playedCards, hokm))) && (!containCard(playedCards, hokm))) {
-            worstCard(myCards, base, base);
-        } else if ((playedCards.size() == 3) && (containCard(myCards, base)) && (topCard(playedCards, hokm) == playedCards.get(1))) {
-            worstCard(myCards, base, base);
-        } else if ((playedCards.size() == 2) && (!containCard(myCards, base)) && (containCard(playedCards, hokm)) && (!containCard(myCards, hokm)) && (base != hokm) && (playedCards.get(1).getSuit() == hokm)) {
-            return worstCardNot(myCards, base, playedCards.get(1).getSuit());
-        } else if ((playedCards.size() == 2) && (containCard(myCards, base)) && (haveBetterCard(myCards, topCard(playedCards, hokm)))) {
-            bestCard(myCards, base);
-        } else if ((playedCards.size() == 3) && (containCard(myCards, base)) && (topCard(playedCards, hokm) != playedCards.get(1)) && (haveBetterCard(myCards, topCard(playedCards, hokm)))) {
-            bestCard(myCards, base);
-        } else if ((playedCards.size() == 3) && (containCard(myCards, base)) && (topCard(playedCards, hokm) != playedCards.get(1))) {
-            worstCard(myCards, base, base);
-        } else if ((playedCards.size() == 2) && (!containCard(myCards, base)) && (topCard(playedCards, hokm) != playedCards.get(0)) && (!containCard(playedCards, hokm)) && (containCard(myCards, hokm))) {          //maybe bad suggest
-            worstCard(myCards, hokm, hokm);
-        } else if ((playedCards.size() == 1) && (!containCard(myCards, base)) && (containCard(myCards, hokm))) {
-            worstCard(myCards, hokm, hokm);
+                                               ArrayList<Card> cardsInHand, Card.Suit rule) {
+        Card.Suit base = playedCards.getFirst().getSuit();
+        if ((playedCards.size() == 1) && (containCard(cardsInHand, base)) && (haveBetterCard(cardsInHand, playedCards.get(0)))) {
+            return bestCard(cardsInHand, base);
+        } else if ((playedCards.size() == 2) && (!containCard(cardsInHand, base)) && (containCard(playedCards, rule)) && (containCard(cardsInHand, rule)) && (bestCard(cardsInHand, rule).compareTo(playedCards.get(1)) < 0) && (base != rule) && (playedCards.get(1).getSuit() == rule)) {
+            return worstCardNot(cardsInHand, base, playedCards.get(1).getSuit());
+        } else if ((playedCards.size() == 2) && (containCard(cardsInHand, base)) && (!haveBetterCard(cardsInHand, topCard(playedCards, rule))) && (!containCard(playedCards, rule))) {
+            worstCard(cardsInHand, base, base);
+        } else if ((playedCards.size() == 3) && (containCard(cardsInHand, base)) && (topCard(playedCards, rule) == playedCards.get(1))) {
+            worstCard(cardsInHand, base, base);
+        } else if ((playedCards.size() == 2) && (!containCard(cardsInHand, base)) && (containCard(playedCards, rule)) && (!containCard(cardsInHand, rule)) && (base != rule) && (playedCards.get(1).getSuit() == rule)) {
+            return worstCardNot(cardsInHand, base, playedCards.get(1).getSuit());
+        } else if ((playedCards.size() == 2) && (containCard(cardsInHand, base)) && (haveBetterCard(cardsInHand, topCard(playedCards, rule)))) {
+            bestCard(cardsInHand, base);
+        } else if ((playedCards.size() == 3) && (containCard(cardsInHand, base)) && (topCard(playedCards, rule) != playedCards.get(1)) && (haveBetterCard(cardsInHand, topCard(playedCards, rule)))) {
+            bestCard(cardsInHand, base);
+        } else if ((playedCards.size() == 3) && (containCard(cardsInHand, base)) && (topCard(playedCards, rule) != playedCards.get(1))) {
+            worstCard(cardsInHand, base, base);
+        } else if ((playedCards.size() == 2) && (!containCard(cardsInHand, base)) && (topCard(playedCards, rule) != playedCards.get(0)) && (!containCard(playedCards, rule)) && (containCard(cardsInHand, rule))) {          //maybe bad suggest
+            worstCard(cardsInHand, rule, rule);
+        } else if ((playedCards.size() == 1) && (!containCard(cardsInHand, base)) && (containCard(cardsInHand, rule))) {
+            worstCard(cardsInHand, rule, rule);
         } else {
             return null;
         }
         return null;
     }
 
-    private static @Nullable Card worstCard(@NotNull ArrayList<Card> cardarray, Card.Suit cardType1,
+    private static @Nullable Card worstCard(@NotNull ArrayList<Card> cards, Card.Suit cardType1,
                                             Card.Suit cardType2) {
         ArrayList<Card> validCards = new ArrayList<>();
-        for (Card card : cardarray) {
+        for (Card card : cards) {
             if ((card.getSuit() == cardType1) || (card.getSuit() == cardType2))
                 validCards.add(card);
         }
@@ -110,16 +110,16 @@ public class GameService {
             return Collections.min(validCards);
     }
 
-    private static Card topCard(@NotNull ArrayList<Card> cards, Card.Suit hokm) {
+    public static Card topCard(@NotNull ArrayList<Card> cards, Card.Suit rule) {
         Card.Suit base = cards.getFirst().getSuit();
-        if (containCard(cards, hokm))
-            return Collections.max(findCard(cards, hokm));
+        if (containCard(cards, rule))
+            return Collections.max(findCard(cards, rule));
         else
             return Collections.max(findCard(cards, base));
     }
 
-    private static boolean haveBetterCard(ArrayList<Card> myCard, @NotNull Card checkCard) {
-        return bestCard(myCard, checkCard.getSuit()).compareTo(checkCard) > 0;
+    private static boolean haveBetterCard(ArrayList<Card> cards, @NotNull Card checkCard) {
+        return bestCard(cards, checkCard.getSuit()).compareTo(checkCard) > 0;
     }
 
     private static Card bestCard(ArrayList<Card> cards, Card.Suit cardType) {
@@ -181,14 +181,13 @@ public class GameService {
             throw new IllegalArgumentException("Invalid number of players! We support just 2 or 4 players.");
         }
     }
-    public static boolean validCard(ArrayList<Card> playedCards,ArrayList<Card> myCards,Card checkCard,Card.Suit hokm){
-        Card.Suit base = playedCards.get(0).getSuit();
-        if((containCard(myCards,base))&&(checkCard.getSuit()!=base)){
-            return false;
-        }
-        else{
-            return true;
-        }
+
+    public static boolean validCard(@NotNull ArrayList<Card> playedCards, ArrayList<Card> cardsInHand,
+                                    @NotNull Card checkCard, Card.Suit rule) {
+        Card.Suit base = playedCards.getFirst().getSuit();
+        return (checkCard.getSuit() == base) ||
+                (!containCard(cardsInHand, base) &&
+                        (checkCard.getSuit() == rule) || !containCard(cardsInHand, rule));
     }
 }
 
